# chatty-platform

./: .env.example  .gitignore  CONTRIBUTING.md  PLAN.md  RATIONALE.md  README.md  docker-compose.yml  generate_submission.py
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  run.py
app/alembic/: env.py
app/alembic/versions/: 7393a246ae62_initial_schema.py
app/scripts/: generate_openapi.py
app/src/chatty/: main.py
app/src/chatty/core/: database.py  logging.py  middleware.py
app/src/chatty/models/: __init__.py  chatroom_participant.py  message.py
app/src/chatty/routers/: chatroom_participants.py  chatrooms.py  health.py  messages.py  users.py
app/src/chatty/schemas/: chatroom.py  chatroom_participant.py  message.py  user.py
terraform/: README.md
