[tool.poetry]
name = "chatty"
version = "0.1.0"
description = "Chatty Backend experimentation"
authors = ["Arturo Boston <person@person.com>"]
packages = [{include = "chatty", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
requests = "^2.32.5"
structlog = "^23.2.0"
python-socketio = "^5.10.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
python-socketio = {extras = ["client"], version = "^5.10.0"}
aiohttp = "^3.9.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length handled by formatter
    "B008", # Depends() in function defaults is standard FastAPI pattern
    "B904", # raise-from in existing codebase -- tracked for future cleanup
]

[tool.ruff.lint.isort]
known-first-party = ["chatty"]

